# rs_tag_lenght_value_stream

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_and_write.rs  parse_only.rs
src/: lib.rs  raw_types.rs  types.rs
